{
    "name": "Inputs",
    "maps": [
        {
            "name": "Player1",
            "id": "975727bb-8f98-45af-8be6-5197ee3dadc6",
            "actions": [
                {
                    "name": "Move_Vertical",
                    "type": "Value",
                    "id": "c039be3e-0323-43bd-9cae-8958cbbc9dde",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move_Horizontal",
                    "type": "Button",
                    "id": "ab63aef4-8c2a-41dd-8e7c-c264ce934994",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "3aaad63e-95b2-47b0-aa0c-eb9d4c48fc3c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9e0248c4-04ea-4327-9d42-5d560d2dcee0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "33024eed-9f7b-4736-ac01-137f37c6c4f6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "e5f43371-68f6-4443-b52a-32b427d71b3f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "bdbf8024-39aa-4228-b434-4f905d0bae86",
                    "path": "<Joystick>/{Forward}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "a99fb832-791d-4333-af07-a4f2f0e980ce",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a5a1e030-a637-4a1d-9d3d-b934c9cc787f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "391a03f6-b7ba-4c3c-be09-eab715984a36",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}